--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    /* box-sizing: border-box; */
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -8,15 +14,26 @@ h1, h2{
 
 h1{
     font-size: 40px;
+    margin-bottom: 20px;
 }
 h2{
     font-size: 30px;
+    margin-bottom: 10px;
 }
-p{
+/* p{
     font-size: 16px;
     text-align: justify;
-}
+} */
 
 img{
-    width: 200px !important;
+    width: 20%;
+}
+
+.main-text{
+    text-align: justify;
+    margin-bottom: 20px;
+}
+
+.author-text{
+    font-size: 22px;
 }
