--- a/style.css
+++ b/style.css
@@ -37,3 +37,15 @@ img{
 .author-text{
     font-size: 22px;
 }
+
+.blog-post{
+    position: relative;
+}
+
+.date{
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    font-size: 18px;
+    color: #000;
+}
