--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
-*,*::before, *::after {
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
-h1{
+h1 {
     margin-top: 0;
     margin-bottom: 0.25em;
     font-size: 4em;
     font-weight: 0.9;
 }
 
-p{
+p {
     margin: 0;
     color: #a9b1b3;
 }
 
-a{
+a {
     padding: 0.5em 1em;
     font-size: 0.8em;
     color: #a9b1b3;
@@ -23,4 +25,191 @@ a{
     letter-spacing: 0.3em;
     border: 1px solid #a9b1b3;
     transition: all 0.3s ease-in-out;
+}
+
+a:hover,
+a:active,
+a:focus {
+    background: #a9b1b3;
+    color: #fff;
+}
+
+figure {
+    margin: 0;
+}
+
+::-moz-selection {
+    background: #d0f2ee;
+    color: #fff;
+    text-shadow: none;
+}
+
+::selection {
+    background: #d0f2ee;
+    color: #fff;
+    text-shadow: none;
+}
+
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 100%;
+    line-height: 1.5;
+    color: #333;
+    background: #fff;
+}
+
+@media screen and (min-width: 20em) {
+    body {
+        font-size: 102.5%;
+    }
+}
+
+@media screen and (min-width: 30em) {
+    body {
+        /* font-size: 110%; */
+        font-size: 102.5%;
+    }
+}
+
+@media screen and (min-width: 40em) {
+    body {
+        /* font-size: 102.5%; */
+        font-size: 105%;
+    }
+}
+
+@media screen and (min-width: 54em) {
+    body {
+        font-size: 107.5%;
+    }
+}
+
+@media screen and (min-width: 64em) {
+    body {
+        font-size: 110%;
+    }
+}
+
+@media screen and (min-width: 76.5em) {
+    body {
+        font-size: 115%;
+    }
+}
+
+@media screen and (min-width: 114em) {
+    body {
+        font-size: 125%;
+    }
+}
+
+.post {
+    min-height: 100vh;
+    width: 100%;
+    border: 0.5em solid #fff;
+}
+
+@media screen and (min-width: 54em) {
+    .post {
+        display: flex;
+        height: 100vh;
+        min-height: 40em;
+    }
+}
+
+.post>*:first-child {
+    position: relative;
+    height: 14em;
+    background-color: black;
+}
+
+@media screen and (min-width: 30em) {
+    .post>*:first-child {
+        height: 18em;
+    }
+}
+
+@media screen and (min-width: 54em) {
+    .post>*:first-child {
+        flex-basis: 50%;
+        max-width: 50%;
+        height: auto;
+    }
+}
+
+@media screen and (min-width: 76.5em) {
+    .post>*:first-child {
+        flex-basis: 60%;
+        max-width: 60%;
+    }
+}
+
+.post-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2em;
+    overflow-y: auto;
+}
+
+.post-time {
+    position: relative;
+    font-weight: 600;
+    font-size: 0.9em;
+    text-transform: uppercase;
+    letter-spacing: 00.3em;
+    overflow: hidden;
+}
+
+.post-content {
+    padding: 2em 0;
+}
+
+@media screen and (min-width: 54em) {
+    .post-content {
+        padding: 0 4em;
+    }
+}
+
+.post-header {
+    overflow: hidden;
+}
+
+.post-header span {
+    display: inline-block;
+    -webkit-animation: slide-up 0.8s ease-in-out both;
+    animation: slide-up 0.8s ease-in-out both;
+}
+
+.post-header span:nth-child(1) {
+    -webkit-animation-delay: 0.1s;
+    animation-delay: 0.1s;
+}
+
+.post-header span:nth-child(2) {
+    -webkit-animation-delay: 0.2;
+    animation-delay: 0.2;
+}
+
+.post-header span:nth-child(3) {
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+}
+
+.post-link{
+    text-align: right;
+}
+
+.absolute-bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* background-color: #000; */
+    overflow: hidden;
+    -webkit-animation: fade-in 0.8s ease-in-out both 1s;
+    animation: fade-in 0.8s ease-in-out both 1s;
 }
